--- a/D19F4E2F9.opf/index.yml
+++ b/D19F4E2F9.opf/index.yml
@@ -4,8 +4,8 @@ revision: '00001'
 annotations:
   d150ffa6bd1c466e895c17def1ea9439:
     parts: {}
+    work_id: D1122
     span:
-    - vol: 1
+    - base: 319d
       start: 0
       end: 1905
-    work_id: D1122
